--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,12 @@ Files IO/files/mydata.dat
 Files IO/files/mydata.dir
 Files IO/files/test1.txt
 Files IO/files/test2.txt
+Files IO/files/example/test1.txt
+
+Files IO/files_backup/example/test1.txt
+Files IO/files_backup/test2.txt
+Files IO/files_backup/test1.txt
+Files IO/files_backup/mydata.dir
+Files IO/files_backup/mydata.dat
+Files IO/files_backup/mydata.bak
+Files IO/files/example/test2.txt
