--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,7 @@ Files IO/files_backup/mydata.dir
 Files IO/files_backup/mydata.dat
 Files IO/files_backup/mydata.bak
 Files IO/files/example/test2.txt
+Files IO/files/py/1.py
+Files IO/files/New Text Document.txt
+log.txt
+*.txt
